add schema graphql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,19 @@ services:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        environment:
+            PMA_HOST: mysql
+            PMA_USER: sail
+            PMA_PASSWORD: password
+        ports:
+            - '8080:80'
+        depends_on:
+            - mysql
+        networks:
+            - sail
+
 networks:
     sail:
         driver: bridge
